# rtmuxer

./: Cargo.toml  example-config.yaml  readme.md
.github/workflows/: build.yml
src/: config.rs  errors.rs  helpers.rs  main.rs  tmux.rs
test-configs/: cwd.yaml
test-configs/inner/: hello.txt
