[package]
name = "rtmuxer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellexpand = "2.1.2"
fehler = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = { version = "1.0.37" }


