[package]
name = "rtmuxer"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 's'  # Optimize for size.
lto = true # Link Time Optimization (LTO)


[dependencies]
shellexpand = "2.1.2"
fehler = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = { version = "1.0.37" }
path-absolutize = "3.0.14"


